--- a/hola.html
+++ b/hola.html
@@ -7,7 +7,7 @@
     <title>hola</title>
 </head>
 <body>
-    <h1>Bienvenido seas </h1>
+    <h1>Bienvenido seas messi </h1>
     <h2>hola </h2>
     hola
 </body>
