--- a/hola.html
+++ b/hola.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hola</title>
+    <style>
+        h1{
+            font-size: 24px;
+            color: blue;
+            font-family: 'Times New Roman', Times, serif;
+        }
+    </style>
 </head>
 <body>
     <h1>Bienvenido seas siuuuuuuuuuuuuu y messi</h1>
